--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
